--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -30,11 +30,11 @@ $dark-page : #121212
 // $info      : #31CCEC
 // $warning   : #F2C037
 
-$primary: #406480
-$secondary: #3082bf
-$accent: #804040
-$dark: #263238
-$positive: #408040
-$negative: #bf3030
-$info: #507ea1
-$warning: #bf7830
+$primary: #336699
+$secondary: #6699CC
+$accent: #FF9900
+$dark: #333333
+$positive: #00CC66
+$negative: #FF3333
+$info: #0099CC
+$warning: #FFCC00
